# llm-deliberate

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
backend/: __init__.py  aggregation.py  automation.py  cli.py  config.py  deliberation.py  export_utils.py  llm_client.py  main.py  models.py  prompts.py
data/experiments/: demo_showcase.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  components.jsx  index.css
